[tool.poetry]
name = "MriNeuralHelper"
version = "0.1.0"
description = ""
authors = ["Ivan Gulyaev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.6.1"
pyqt6-webengine = "^6.6.0"
plotly = "^5.18.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
albumentations = "^1.3.1"
nibabel = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
